Bug 502425 - Newly-created System Tray's popup floats inappropriately and its icons are wrong
Summary: Newly-created System Tray's popup floats inappropriately and its icons are wrong
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-04-04 19:59 UTC by Nate Graham
Modified: 2025-04-07 19:08 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments
Floats inappropriately and icons are wrong (172.57 KB, image/png)
2025-04-04 19:59 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2025-04-04 19:59:16 UTC
Created attachment 180010 [details]
Floats inappropriately and icons are wrong

STEPS TO REPRODUCE
1. Enter Edit Mode
2. Add Panel > Default Panel
3. Allow a window to touch the new default panel so it de-floats
4. Click anything in the new panel's System Tray


OBSERVED RESULT
The tray popup floats even though there's a window touching its parent panel, and some of the icons are incorrectly colorful rather than monochrome.


EXPECTED RESULT
The tray popup does not float, and the icons are all monochrome. 


ADDITIONAL INFORMATION
This is only seen with newly-created System Tray widgets; existing ones that were migrated to be nested containments (see https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5043) instead suffer from Bug 502424.
Comment 1 Marco Martin 2025-04-07 08:08:49 UTC
does it still behave that way after restarting plasma?
Comment 2 Bug Janitor Service 2025-04-07 10:00:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1297
Comment 3 Marco Martin 2025-04-07 10:16:02 UTC
Git commit 1268f879061ab421703f7c9fade6f8e0f6a9e45d by Marco Martin.
Committed on 07/04/2025 at 10:15.
Pushed by mart into branch 'master'.

Containment display hints: deduplicate changed signal

Both Applet and Containment had a containmentDisplayHintsChanged
signal with the same signature: thi was dome because on old Qt5
a signal from the superclass couldn't be used as NOTIFY, but this
brings to obscure bugs as sometimes the signal didn't make through
QML because we were connected to the "wrong" signal
Related: bug 502424

M  +0    -5    src/plasma/containment.h

https://invent.kde.org/plasma/libplasma/-/commit/1268f879061ab421703f7c9fade6f8e0f6a9e45d
Comment 4 Bug Janitor Service 2025-04-07 10:16:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1298
Comment 5 Bug Janitor Service 2025-04-07 11:58:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1299
Comment 6 Marco Martin 2025-04-07 15:20:50 UTC
Git commit b83fe855c5a860ce69430261ee7434c83c41fef2 by Marco Martin.
Committed on 07/04/2025 at 15:20.
Pushed by mart into branch 'master'.

In case of nested containments return formfactor of parent containments

in case of nested containments, use the formFactor and location of the parent
containment, not its own. As for instance a systemtray in an horizontal panel
must always have the formfactor of the containing panel, not have its own

M  +29   -10   src/plasma/applet.cpp

https://invent.kde.org/plasma/libplasma/-/commit/b83fe855c5a860ce69430261ee7434c83c41fef2