In case of nested containments return formfactor of parent containments

in case of nested containments, use the formFactor and location of the parent
containment, not its own. As for instance a systemtray in an horizontal panel
must always have the formfactor of the containing panel, not have its own

BUG:502425